<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_rate"
                    android:textColor="@color/accent"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/textSampleRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/zero_sample"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <Space
                android:layout_width="16dp"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samples"
                    android:textColor="@color/accent"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/textSamples"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/zero"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonSettings"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/fab_transparent"
            android:src="@drawable/icon_settings" />
    </RelativeLayout>

    <lucns.blevoltimeter.views.SliderView
        android:id="@+id/sliderView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" />
</RelativeLayout>