<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/settings"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/rootEditTexts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textA0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/a0_compensation"
                    android:textColor="@color/accent" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editTextA0"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/initial_compensation"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="256"
                android:maxLines="1"
                android:paddingStart="@dimen/margin_2"
                android:paddingEnd="@dimen/margin_2"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor" />
        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textA1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/a1_compensation"
                    android:textColor="@color/accent" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editTextA1"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/initial_compensation"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="256"
                android:maxLines="1"
                android:paddingStart="@dimen/margin_2"
                android:paddingEnd="@dimen/margin_2"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor" />
        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textA2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/a2_compensation"
                    android:textColor="@color/accent" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editTextA2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/initial_compensation"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="256"
                android:maxLines="1"
                android:paddingStart="@dimen/margin_2"
                android:paddingEnd="@dimen/margin_2"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor" />
        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textA3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/a3_compensation"
                    android:textColor="@color/accent" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editTextA3"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/initial_compensation"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="256"
                android:maxLines="1"
                android:paddingStart="@dimen/margin_2"
                android:paddingEnd="@dimen/margin_2"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_state"
        android:text="@string/calibrate"
        android:textColor="@drawable/button_text_state" />
</RelativeLayout>