<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a0"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/textA0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/zero_volts"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="4dp" />

            <lucns.blevoltimeter.views.WaveView
                android:id="@+id/waveViewA0"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a1"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/textA1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/zero_volts"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="4dp" />

            <lucns.blevoltimeter.views.WaveView
                android:id="@+id/waveViewA1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a2"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/textA2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/zero_volts"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="4dp" />

            <lucns.blevoltimeter.views.WaveView
                android:id="@+id/waveViewA2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a3"
                    android:textColor="@color/accent"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/textA3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_regular"
                    android:text="@string/zero_volts"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="4dp" />

            <lucns.blevoltimeter.views.WaveView
                android:id="@+id/waveViewA3"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Space
            android:layout_width="16dp"
            android:layout_height="48dp" />
    </LinearLayout>
</RelativeLayout>