<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <lucns.blevoltimeter.views.textview.AutofitTextView
                    android:id="@+id/textA0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/textUnit0"
                    android:fontFamily="@font/barlow_light"
                    android:text="@string/zero_volts"
                    android:textColor="@android:color/white"
                    android:textSize="64sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/a0"
                    android:textColor="@color/accent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textUnit0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/barlow_light"
                    android:text="@string/voltage_unit"
                    android:textSize="110sp" />

                <TextView
                    android:id="@+id/textA02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textA0"
                    android:fontFamily="@font/barlow_bold"
                    android:textColor="@color/accent"
                    android:textSize="24sp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <lucns.blevoltimeter.views.textview.AutofitTextView
                    android:id="@+id/textA1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/textUnit1"
                    android:fontFamily="@font/barlow_light"
                    android:text="@string/zero_volts"
                    android:textColor="@android:color/white"
                    android:textSize="64sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/a1"
                    android:textColor="@color/accent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textUnit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/barlow_light"
                    android:text="@string/voltage_unit"
                    android:textSize="110sp" />

                <TextView
                    android:id="@+id/textA12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textA1"
                    android:fontFamily="@font/barlow_bold"
                    android:textColor="@color/accent"
                    android:textSize="24sp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <lucns.blevoltimeter.views.textview.AutofitTextView
                    android:id="@+id/textA2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/textUnit2"
                    android:fontFamily="@font/barlow_light"
                    android:text="@string/zero_volts"
                    android:textColor="@android:color/white"
                    android:textSize="64sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/a2"
                    android:textColor="@color/accent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textUnit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/barlow_light"
                    android:text="@string/voltage_unit"
                    android:textSize="110sp" />

                <TextView
                    android:id="@+id/textA22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textA2"
                    android:fontFamily="@font/barlow_bold"
                    android:textColor="@color/accent"
                    android:textSize="24sp" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <lucns.blevoltimeter.views.textview.AutofitTextView
                    android:id="@+id/textA3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/textUnit3"
                    android:fontFamily="@font/barlow_light"
                    android:text="@string/zero_volts"
                    android:textColor="@android:color/white"
                    android:textSize="64sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/a3"
                    android:textColor="@color/accent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textUnit3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/barlow_light"
                    android:text="@string/voltage_unit"
                    android:textSize="110sp" />

                <TextView
                    android:id="@+id/textA32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textA3"
                    android:fontFamily="@font/barlow_bold"
                    android:textColor="@color/accent"
                    android:textSize="24sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>